// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renderer:breadcrumb 1`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Breadcrumb"
  >
    <span
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Breadcrumb-item"
    >
      <a
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Breadcrumb-item-default"
        href="https://baidu.gitee.com/"
      >
        <i
          class="fa fa-home __PRISMUI_COMPONENT_CLASS_PREFIX__Icon __PRISMUI_COMPONENT_CLASS_PREFIX__Breadcrumb-icon fa fa-home"
        />
        <span
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
        >
          首页
        </span>
      </a>
    </span>
    <span
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Breadcrumb-separator"
    >
      &gt;
    </span>
    <span
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Breadcrumb-item"
    >
      <span
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Breadcrumb-item-default"
      >
        <span
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
        >
          上级页面
        </span>
      </span>
    </span>
    <span
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Breadcrumb-separator"
    >
      &gt;
    </span>
    <span
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Breadcrumb-item __PRISMUI_COMPONENT_CLASS_PREFIX__Breadcrumb-item-last"
    >
      <span
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Breadcrumb-item-default"
      >
        <span
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
        >
          当前页面
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`Renderer:breadcrumb className 1`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Breadcrumb className"
  >
    <span
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Breadcrumb-item"
    >
      <a
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Breadcrumb-item-default itemClassName"
        href="https://baidu.gitee.com/"
      >
        <i
          class="fa fa-home __PRISMUI_COMPONENT_CLASS_PREFIX__Icon __PRISMUI_COMPONENT_CLASS_PREFIX__Breadcrumb-icon fa fa-home"
        />
        <span
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
        >
          首页
        </span>
      </a>
    </span>
    <span
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Breadcrumb-separator"
    >
      &gt;
    </span>
    <span
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Breadcrumb-item is-opened"
    >
      <span
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Breadcrumb-item-default itemClassName"
      >
        <span
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
        >
          上级页面
        </span>
      </span>
      <span
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Breadcrumb-item-caret"
      >
        <icon-mock
          class="icon icon-down"
          icon="down"
        />
      </span>
      <ul
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Breadcrumb-dropdown dropdownClassName"
      >
        <li>
          <a
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Breadcrumb-item-dropdown dropdownItemClassName"
            href="https://baidu.gitee.com/"
          >
            <span
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
            >
              选项一
            </span>
          </a>
        </li>
        <li>
          <span
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Breadcrumb-item-dropdown dropdownItemClassName"
          >
            <span
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
            >
              选项二
            </span>
          </span>
        </li>
      </ul>
    </span>
    <span
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Breadcrumb-separator"
    >
      &gt;
    </span>
    <span
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Breadcrumb-item __PRISMUI_COMPONENT_CLASS_PREFIX__Breadcrumb-item-last"
    >
      <span
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Breadcrumb-item-default itemClassName"
      >
        <span
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
        >
          当前页面
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`Renderer:breadcrumb dropdown 1`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page"
    data-prismui-theme="cxd"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-content"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-main"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-body"
          role="page-body"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Breadcrumb"
          >
            <span
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Breadcrumb-item"
            >
              <a
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Breadcrumb-item-default"
                href="https://baidu.gitee.com/"
              >
                <i
                  class="fa fa-home __PRISMUI_COMPONENT_CLASS_PREFIX__Icon __PRISMUI_COMPONENT_CLASS_PREFIX__Breadcrumb-icon fa fa-home"
                />
                <span
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                >
                  首页
                </span>
              </a>
            </span>
            <span
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Breadcrumb-separator"
            >
              &gt;
            </span>
            <span
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Breadcrumb-item"
            >
              <span
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Breadcrumb-item-default"
              >
                <span
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                >
                  上级页面
                </span>
              </span>
              <span
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Breadcrumb-item-caret"
              >
                <icon-mock
                  class="icon icon-down"
                  icon="down"
                />
              </span>
            </span>
            <span
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Breadcrumb-separator"
            >
              &gt;
            </span>
            <span
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Breadcrumb-item __PRISMUI_COMPONENT_CLASS_PREFIX__Breadcrumb-item-last"
            >
              <span
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Breadcrumb-item-default"
              >
                <span
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                >
                  当前页面
                </span>
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:breadcrumb separator 1`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page"
    data-prismui-theme="cxd"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-content"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-main"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-body"
          role="page-body"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Breadcrumb"
          >
            <span
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Breadcrumb-item"
            >
              <a
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Breadcrumb-item-default"
                href="https://baidu.gitee.com/"
              >
                <i
                  class="fa fa-home __PRISMUI_COMPONENT_CLASS_PREFIX__Icon __PRISMUI_COMPONENT_CLASS_PREFIX__Breadcrumb-icon fa fa-home"
                />
                <span
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                >
                  首页
                </span>
              </a>
            </span>
            <span
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Breadcrumb-separator text-black"
            >
              &gt;
            </span>
            <span
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Breadcrumb-item"
            >
              <span
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Breadcrumb-item-default"
              >
                <span
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                >
                  上级页面
                </span>
              </span>
            </span>
            <span
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Breadcrumb-separator text-black"
            >
              &gt;
            </span>
            <span
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Breadcrumb-item __PRISMUI_COMPONENT_CLASS_PREFIX__Breadcrumb-item-last"
            >
              <span
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Breadcrumb-item-default"
              >
                <span
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                >
                  当前页面
                </span>
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:breadcrumb tooltip labelMaxLength 1`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page"
    data-prismui-theme="cxd"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-content"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-main"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-body"
          role="page-body"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Breadcrumb"
          >
            <span
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Breadcrumb-item"
            >
              <a
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Breadcrumb-item-default"
                href="https://baidu.gitee.com/"
              >
                <i
                  class="fa fa-home __PRISMUI_COMPONENT_CLASS_PREFIX__Icon __PRISMUI_COMPONENT_CLASS_PREFIX__Breadcrumb-icon fa fa-home"
                />
                <span
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                />
              </a>
            </span>
            <span
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Breadcrumb-separator text-black"
            >
              &gt;
            </span>
            <span
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Breadcrumb-item"
            >
              <a
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Breadcrumb-item-default"
              >
                <span
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                >
                  上级页面上级页面上级页面上级页面...
                </span>
              </a>
            </span>
            <span
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Breadcrumb-separator text-black"
            >
              &gt;
            </span>
            <span
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Breadcrumb-item __PRISMUI_COMPONENT_CLASS_PREFIX__Breadcrumb-item-last"
            >
              <span
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Breadcrumb-item-default"
              >
                <span
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                >
                  当前页面
                </span>
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:breadcrumb tooltip labelMaxLength 2`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page"
    data-prismui-theme="cxd"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-content"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-main"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-body"
          role="page-body"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Breadcrumb"
          >
            <span
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Breadcrumb-item"
            >
              <a
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Breadcrumb-item-default"
                href="https://baidu.gitee.com/"
              >
                <i
                  class="fa fa-home __PRISMUI_COMPONENT_CLASS_PREFIX__Icon __PRISMUI_COMPONENT_CLASS_PREFIX__Breadcrumb-icon fa fa-home"
                />
                <span
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                />
              </a>
            </span>
            <span
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Breadcrumb-separator text-black"
            >
              &gt;
            </span>
            <span
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Breadcrumb-item"
            >
              <a
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Breadcrumb-item-default"
              >
                <span
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                >
                  上级页面上级页面上级页面上级页面...
                </span>
              </a>
            </span>
            <span
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Breadcrumb-separator text-black"
            >
              &gt;
            </span>
            <span
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Breadcrumb-item __PRISMUI_COMPONENT_CLASS_PREFIX__Breadcrumb-item-last"
            >
              <span
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Breadcrumb-item-default"
              >
                <span
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                >
                  当前页面
                </span>
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:breadcrumb tooltip labelMaxLength 3`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page"
    data-prismui-theme="cxd"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-content"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-main"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-body"
          role="page-body"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Breadcrumb"
          >
            <span
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Breadcrumb-item"
            >
              <a
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Breadcrumb-item-default"
                href="https://baidu.gitee.com/"
              >
                <i
                  class="fa fa-home __PRISMUI_COMPONENT_CLASS_PREFIX__Icon __PRISMUI_COMPONENT_CLASS_PREFIX__Breadcrumb-icon fa fa-home"
                />
                <span
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                />
              </a>
            </span>
            <span
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Breadcrumb-separator text-black"
            >
              &gt;
            </span>
            <span
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Breadcrumb-item"
            >
              <a
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Breadcrumb-item-default"
              >
                <span
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                >
                  上级页面上级页面上级页面上级页面...
                </span>
              </a>
            </span>
            <span
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Breadcrumb-separator text-black"
            >
              &gt;
            </span>
            <span
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Breadcrumb-item __PRISMUI_COMPONENT_CLASS_PREFIX__Breadcrumb-item-last"
            >
              <span
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Breadcrumb-item-default"
              >
                <span
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                >
                  当前页面
                </span>
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:breadcrumb tooltip labelMaxLength 4`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page"
    data-prismui-theme="cxd"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-content"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-main"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-body"
          role="page-body"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Breadcrumb"
          >
            <span
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Breadcrumb-item"
            >
              <a
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Breadcrumb-item-default"
                href="https://baidu.gitee.com/"
              >
                <i
                  class="fa fa-home __PRISMUI_COMPONENT_CLASS_PREFIX__Icon __PRISMUI_COMPONENT_CLASS_PREFIX__Breadcrumb-icon fa fa-home"
                />
                <span
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                />
              </a>
            </span>
            <span
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Breadcrumb-separator text-black"
            >
              &gt;
            </span>
            <span
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Breadcrumb-item"
            >
              <a
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Breadcrumb-item-default"
              >
                <span
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                >
                  上级页面上级页面上级页面上级页面...
                </span>
              </a>
            </span>
            <span
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Breadcrumb-separator text-black"
            >
              &gt;
            </span>
            <span
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Breadcrumb-item __PRISMUI_COMPONENT_CLASS_PREFIX__Breadcrumb-item-last"
            >
              <span
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Breadcrumb-item-default"
              >
                <span
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                >
                  当前页面
                </span>
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:breadcrumb var 1`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page"
    data-prismui-theme="cxd"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-content"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-main"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-body"
          role="page-body"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Breadcrumb"
          >
            <span
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Breadcrumb-item"
            >
              <a
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Breadcrumb-item-default"
                href="https://baidu.gitee.com/"
              >
                <span
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                >
                  首页
                </span>
              </a>
            </span>
            <span
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Breadcrumb-separator"
            >
              &gt;
            </span>
            <span
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Breadcrumb-item"
            >
              <span
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Breadcrumb-item-default"
              >
                <span
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                >
                  上级页面
                </span>
              </span>
            </span>
            <span
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Breadcrumb-separator"
            >
              &gt;
            </span>
            <span
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Breadcrumb-item __PRISMUI_COMPONENT_CLASS_PREFIX__Breadcrumb-item-last"
            >
              <span
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Breadcrumb-item-default"
              >
                <span
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                >
                  当前页面
                </span>
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
